# it82202-zephyr-application

./: .gitignire  .gitignore  CMakeLists.txt  README.md  app.overlay  build.sh  flash.sh  getZver.sh  itedlb4.sh  linker.ld  make_ec_version.py  prj.conf  update.sh  update_headers.py
ITESBT_v1.6.6/: NIST user Guide.docx  pri_test_02.pem  pub_test_0B_pri_test_02.pem  run_ECC_PubKey.bat  run_RSA_PubKey.bat
ITESBT_v1.6.6/OpenSSL/: OpenSSL Generate Key.docx
src/app/: CMakeLists.txt  app.c  cmdparser.c  cmdparser.h  thermalmgm.c  thermalmgm.h  version.c  version.h
src/boards/: CMakeLists.txt  ite_board_config.h  ite_board_init.c  ite_board_init.h  ite_gpio.c  ite_gpio.h  ite_hid_acpi_i2c.c  ite_hid_acpi_i2c.h  ite_i2c_target.c  ite_i2c_target.h
src/core/: CMakeLists.txt  CORE_CHIPREGS.c  CORE_CHIPREGS.h  CORE_Memory.c  CORE_Memory.h  CORE_SLAVE_I2C.c  CORE_SLAVE_I2C.h  CORE_TYPES.h
src/include/: CMakeLists.txt  include.h
src/misc/: CMakeLists.txt  ite_task_def.c  ite_task_def.h  ite_task_handler.c  ite_task_handler.h
src/oem/: CMakeLists.txt  OEM_ACPI.c  OEM_ACPI.h  OEM_Memory.c  OEM_Memory.h  OEM_NIST.c  OEM_NIST.h  OEM_PROJECT.h  OEM_VER.c  OEM_VER.h
src/test/: CMakeLists.txt  test_ite_functions.c  test_ite_functions.h  test_ite_i2c_dev.c  test_ite_i2c_dev.h
